removing negative margin from USA map (for now) to stop it from overlapping

--- a/src/components/USAMap.css
+++ b/src/components/USAMap.css
@@ -1,5 +1,5 @@
 .usa-map svg {
-  margin-top: -40px;
+  /* margin-top: -40px; */
   margin-left: 20px;
 }
 
